--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,7 +3,7 @@
     "stylelint-config-recommended"
   ],
   "rules": {
-    "unit-allowed-list": ["%", "deg", "px", "rem", "ms", "fr", "vh", "s", "ch"],
+    "unit-allowed-list": ["%", "deg", "px", "rem", "ms", "fr", "vh", "vw", "s", "ch"],
     "at-rule-no-unknown": null,
     "no-invalid-position-at-import-rule": null,
     "media-query-no-invalid": null
